Fixed icon-bar not showing issue

--- a/Content/Site.css
+++ b/Content/Site.css
@@ -1,4 +1,8 @@
-﻿
+
+.navbar-toggle .icon-bar {
+    background-color: #428bca;
+}
+
 body {
     padding-top: 0px;
     padding-bottom: 0px;
